# alpakaTune-ml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements-train.txt
.github/workflows/: ci.yml
cmake/: alpakatune-paths.cmake.in  alpakatune-paths.json.in  alpakatune-paths.sh.in
configs/: campaign-array.example.txt  campaign-cpu-array.example.txt  campaign-pairs.example.txt  campaign.cpu.example.yaml  campaign.example.yaml  splits.example.yaml  training.example.yaml
configs/rosi/experiment-01/: campaign-cpu.yaml  campaign-gpu.yaml  campaign-pairs.txt  training.yaml
docs/: artifact-format.md  data-contract.md  rosi.md
hpc/rosi/: collect-array.sbatch  collect-cpu-array.sbatch  collect-cpu.sbatch  collect-paired-array.sbatch  collect.sbatch  compare-strategies.sbatch  experiment-01.env.sh  merge-members.sbatch  modules.sh  pair-tools.py  prepare-dataset.sbatch  setup-login.sh  submit-bounded-pool.sh  submit-collection-dataset.sh  submit-comparison.sh  submit-training-array.sh  train-member-array.sbatch  train.sbatch  validate-bounded-pool.py  validate-bounded-pool.sbatch
src/alpakatune_ml/: __init__.py  artifact.py  benchmark.py  cli.py  collect.py  contracts.py  dataset.py  evaluation.py  features.py  model.py  plotting.py  search_evaluation.py  training.py  util.py
tests/: test_artifact.py  test_collect.py  test_collect_array.py  test_collect_paired_array.py  test_contracts.py  test_dataset.py  test_distributed_training.py  test_features.py  test_rosi_scripts.py  test_search_evaluation.py
tests/fixtures/histories/: complete-v9.json
