[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "alpakatune-ml"
version = "0.1.0"
description = "Reproducible data generation and learned cost models for alpakaTune"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
authors = [{name = "alpakaTune contributors"}]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
train = ["torch>=2.3"]
plot = ["matplotlib>=3.8"]
test = ["pytest>=8.0"]
all = ["torch>=2.3", "matplotlib>=3.8", "pytest>=8.0"]

[project.scripts]
alpakatune-ml = "alpakatune_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

